--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@scaleton/tvm-disassembler": "^0.0.22",
-    "@ton/core": "^0.60.1",
+    "@ton-community/tlb-runtime": "1.0.0-alpha.3",
+    "@ton/core": "^0.61.0",
     "@truecarry/tlb-abi": "0.2.0-beta.8",
     "buffer": "^6.0.3",
     "solid-js": "^1.9.5",
@@ -20,11 +21,6 @@
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
     "vite-plugin-solid": "^2.11.2"
-  },
-  "pnpm": {
-    "patchedDependencies": {
-      "@ton/core@0.60.1": "patches/@ton__core@0.60.0.patch"
-    }
   },
   "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
 }
